[package]
name = "rce-runner"
version = "1.2.2"
authors = ["Success Kingsley <hello@xosnrdev.tech>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
