[package]
name = "rce-runner"
version = "1.2.2"
authors = ["Success Kingsley <hello@xosnrdev.tech>"]
description = """
A command line application that reads code as a
json payload from stdin – compiles and runs the code – and writes
the result as json to stdout.
"""
edition = "2021"
license = "MIT"
repository = "https://github.com/ToolKitHub/rce-runner"

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
