[package]
name = "rce-runner"
version = "1.2.4"
authors = ["ToolKitHub"]
description = "A command line tool that runs your code snippets in many different programming languages"
edition = "2024"
license = "MIT"
repository = "https://github.com/ToolKitHub/rce-runner"
homepage = "https://github.com/ToolKitHub/rce-runner?tab=readme-ov-file#readme"

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"

# We use `opt-level = "s"` as it significantly reduces binary size.
[profile.release]
codegen-units = 1           # reduces binary size by ~2%
debug = "full"              # No one needs an undebuggable release binary
lto = true                  # reduces binary size by ~14%
opt-level = "s"             # reduces binary size by ~25%
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%
incremental = true          # Improves re-compile times

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
